--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,44 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
+}
+
+blockquote {
+	background-color: rgba(0,0,0,.85);
+	position: absolute;
+	top: 30%;
+	left: 25%;
+	padding: 15px;
+	margin: 0 auto;
+	width: 50%;
+	text-align: center;
+	border-radius: 5px;
+}
+
+q, p {
+	color: white;
+}
+
+q {
+	font-size: 1.5em;
+}
+
+p {
+	font-family: 'Merriweather', serif;
+}
+
+button {
+	position: absolute;
+	top: 60%;
+	left: 46%;
+	z-index: 1;
+	border: none;
+	border-radius: 2px;
+	width: 140px;
+	height: 40px;
+	font-family: 'Lato', sans-serif;
+	font-size: .8em;
+	box-shadow: 0 1px 2px 1px rgba(0,0,0,.3);
+	/*background-color: none;*/
 }
