--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,6 @@ body {
 blockquote {
 	background-color: rgba(0,0,0,.85);
 	position: absolute;
-	top: 30%;
-	left: 25%;
-	padding: 15px;
-	margin: 0 auto;
-	width: 50%;
 	text-align: center;
 	border-radius: 5px;
 }
@@ -30,8 +25,8 @@ p {
 
 button {
 	position: absolute;
-	top: 60%;
-	left: 46%;
+	/* top: 60%;
+	left: 46%; */
 	z-index: 1;
 	border: none;
 	border-radius: 2px;
@@ -40,5 +35,71 @@ button {
 	font-family: 'Lato', sans-serif;
 	font-size: .8em;
 	box-shadow: 0 1px 2px 1px rgba(0,0,0,.3);
-	/*background-color: none;*/
+}
+
+
+@media screen and (max-width: 450px) {
+  blockquote {
+    top: 20%;
+    left: 1%;
+    padding: 20px;
+    width: 70%;
+  }
+
+  button {
+    top: 60%;
+    left: 34%;
+  }
+}
+
+@media screen and (min-width: 451px) {
+  blockquote {
+    top: 20%;
+  	left: 4%;
+    padding: 20px;
+    width: 70%;
+  }
+
+  button {
+    top: 60%;
+  	left: 37%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  blockquote {
+  	left: 15%;
+    width: 50%;
+  }
+
+  button {
+    top: 70%;
+  	left: 39%;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  blockquote {
+    top: 25%;
+    left: 22%;
+    width: 40%;
+  }
+
+  button {
+    top: 70%;
+    left: 41%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  blockquote {
+    top: 25%;
+    left: 25%;
+    width: 40%;
+  }
+
+  button {
+    top: 70%;
+    left: 44%;
+  }
 }
